--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   <h3>學歷</h3>
   <ul>
     <li>靜宜大學 資訊管理學系 大二 (2023年入學)</li>
-    <li>國立岡山高級中學  (2020)</li>
+    <li>國立岡山高級中學  (2020至2023)</li>
   </ul>
 </section>
 
